--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "MEAN structure for google app engine",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gcloud app deploy",
+    "start": "node app.js",
+    "system-test": "repo-tools test app",
+    "test": "npm run system-test",
+    "e2e-test": "repo-tools test deploy"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/karocksjoelee/google-app-engine-mean.git"
+  },
+  "engines": {
+    "node": "^10.0.0"
   },
   "keywords": [
     "google-app-engine",
@@ -21,5 +28,20 @@
   "bugs": {
     "url": "https://github.com/karocksjoelee/google-app-engine-mean/issues"
   },
-  "homepage": "https://github.com/karocksjoelee/google-app-engine-mean#readme"
+  "homepage": "https://github.com/karocksjoelee/google-app-engine-mean#readme",
+  "dependencies": {
+    "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "@google-cloud/nodejs-repo-tools": "^3.3.0"
+  },
+  "cloud-repo-tools": {
+    "test": {
+      "app": {
+        "msg": "Hello, world!"
+      }
+    },
+    "requiresKeyFile": true,
+    "requiresProjectId": true
+  }
 }
